[package]
name = "flipdot-graphics"
version = "0.1.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "An implementation of the embedded-graphics DrawTarget trait using the flipdot crate"
license = "MIT"
documentation = "https://docs.rs/flipdot-graphics"
repository = "https://github.com/alusch/flipdot-graphics"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus", "sign", "RS-485", "graphics"]
categories = ["hardware-support"]
edition = "2024"

[dependencies]
embedded-graphics-core = "0.4.0"
serial = "0.4.0"

flipdot = "0.8.0"
flipdot-testing = "0.8.0"

[dev-dependencies]
embedded-graphics = "0.8.1"
env_logger = "0.11.6"
